[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghl-cli"
version = "0.1.0"
description = "Command-line interface for GoHighLevel API v2"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ben Sharpe" }
]
keywords = ["gohighlevel", "cli", "crm", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.1",
]

[project.scripts]
ghl = "ghl.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ghl"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
